# Start

./: .cursorignore  .gitignore  CMakeLists.txt  Compiling_CGAL.txt  Compiling_Trilinos.txt  Dockerfile  Dockerfile.fedora.40.cpptesting  Dockerfile.nvidia.cuda.12.6.2.ubuntu.22.04.base.image  Dockerfile.nvidia.cuda.12.6.2.ubuntu.22.04.cpptesting  Dockerfile.ubuntu.22.04.base.image  Dockerfile.ubuntu.22.04.cpptesting  Dockerfile.ubuntu.executable  Doxyfile  README.md  Trilinos_compile_on_Linux.txt  Trilinos_compile_on_Windows.txt  Windows compilation instructions.txt  compile.bat  compile.sh  create_executable.bat  create_executable.sh  documentation.md  fix_qt.txt  include_math.sty  kde_hist_plotter.py  module_finder.py  requirements.txt  run_in_docker.sh  show_git_changes.sh  update_base_images.sh
.github/: dependabot.yml
configs/: config1.json  config2.json  config3.json  config4.json  config5.json  config_big_cube_meshSize_3.json  config_manual_camera.json  config_plates.json  config_two_spheres.json  config_work.json  config_work_two_plates.json  configtest.json
docker/: Dockerfile.fedora.40.base.image  Dockerfile.fedora.40.cpptesting  Dockerfile.ubuntu.22.04.cpptesting
include/: GpuProcessing.hpp  ModelingMainDriver.hpp  ParticleInCell.hpp  gpu_test.hpp
intermediateResults/: nonmonoenergeticMonodirectionJet.cpp  particlesSphereLikeExpansion.cpp  rotation_metod.cpp
meshes/: TwoPlates.msh  (+26 more)
src/: CMakeLists.txt  GSMatrixAssemblier.cpp  GpuProcessing.cu  MatrixEquationSolver.cpp  ModelingMainDriver.cpp  Particle.cpp  ParticleInCell.cpp  Utilities.cpp  gpu_test.cu  main.cpp
src/DataHandling/: CMakeLists.txt  HDF5Handler.cpp  SettledParticleHDF5Writer.cpp  TetrahedronMeshManager.cpp  TriangleMeshHdf5Manager.cpp  VolumetricMeshData.cpp
src/FiniteElementMethod/: CMakeLists.txt  FEMCheckers.cpp  FEMInitializer.cpp  FEMPrinter.cpp  GSMAssembler.cpp  GSMAssemblier.cpp  GSMatrixAssemblier.cpp  MatrixEquationSolver.cpp  SolutionVector.cpp
src/FiniteElementMethod/Assemblers/: GSMAssembler.cpp
src/FiniteElementMethod/BoundaryConditions/: BoundaryConditionsManager.cpp  CMakeLists.txt  MatrixBoundaryConditionsManager.cpp  VectorBoundaryConditionsManager.cpp
src/FiniteElementMethod/Cell/: CMakeLists.txt  CellSelector.cpp  CellSelectorException.cpp
src/FiniteElementMethod/Cubature/: CMakeLists.txt  CubatureManager.cpp
src/FiniteElementMethod/LinearAlgebraManagers/: CMakeLists.txt  MatrixManager.cpp  VectorManager.cpp
src/FiniteElementMethod/Solvers/: MatrixEquationSolver.cpp
src/FiniteElementMethod/Utils/: FEMCheckers.cpp  FEMInitializer.cpp  FEMPrinter.cpp
src/Generators/: CMakeLists.txt  ParticleGenerator.cpp  ParticleGenerator.cu  ParticleGenerator_CUDA.cu  RealNumberGenerator.cpp  VolumeCreator.cpp
src/Generators/CUDA/: CMakeLists.txt  ParticleGenerator.cu  ParticleGeneratorDevice.cu
src/Generators/Host/: ParticleGeneratorHost.cpp  RealNumberGeneratorHost.cpp
src/Geometry/: CMakeLists.txt  CubicGrid.cpp  GeometryTypes.cpp  MathVector.cpp  Mesh.cpp  RayTriangleIntersection.cpp
src/Geometry/Basics/: Edge.cpp
src/Geometry/CUDA/: AABBTreeDevice.cu  CMakeLists.txt  GeometryDeviceMemoryConverter.cu  GeometryIntersectionChecker.cu  GeometryKernels.cu
src/Geometry/Mesh/Cubic/: CubicGrid.cpp
src/Geometry/Mesh/Surface/: SurfaceMesh.cpp  TriangleCell.cpp
src/Geometry/Mesh/Volumetric/: VolumetricMesh.cpp
src/Geometry/Utils/Intersections/: SegmentTriangleIntersection.cpp
src/Geometry/Utils/Overlaps/: TriangleOverlapCalculator.cpp
src/Particle/: CMakeLists.txt  Particle.cpp  ParticleDisplacer.cpp
src/Particle/CUDA/: CMakeLists.txt  ParticleDevice.cu  ParticleDeviceMemoryConverter.cu  ParticleKernels.cu
src/Particle/PhysicsCore/: CMakeLists.txt
src/Particle/PhysicsCore/CollisionModel/: CMakeLists.txt  CollisionModelFactory.cpp  HSModel.cpp  VHSModel.cpp  VSSModel.cpp
src/ParticleInCellEngine/: CMakeLists.txt  ChargeDensityEquationSolver.cpp  NodeChargeDensityProcessor.cpp
src/ParticleInCellEngine/DynamicSolver/: CMakeLists.txt  DynamicSolver.cpp  ParticleMovementTracker.cpp  ParticlePhysicsUpdater.cpp  ParticleSettler.cpp  SurfaceCollisionHandler.cpp
src/ParticleInCellEngine/ParticleDynamicsProcessor/: CMakeLists.txt  ParticleDistributor.cpp  ParticleDynamicsProcessor.cpp  ParticleMovementTracker.cpp  ParticlePhysicsUpdater.cpp  ParticleSettler.cpp  ParticleSurfaceCollisionHandler.cpp  StopModelingObserver.cpp
src/ParticleInCellEngine/ParticleDynamicsProcessor/CUDA/: ParticleDynamicsProcessorCUDA.cu  ParticleSurfaceCollisionHandlerCUDA.cu
src/ParticleTracker/: CMakeLists.txt  Grid3D.cpp  ParticleTracker.cpp
src/Particles/: Particle.cpp
src/SessionManagement/: CMakeLists.txt  GmshSessionManager.cpp
src/SputteringModel/: CMakeLists.txt  SputteringModel.cpp  SputteringModelingDriver.cpp  TwoPlatesCreator.cpp  TwoPlatesCreator.hpp
src/Utilities/: CMakeLists.txt  CollisionTracker.cpp  ConfigParser.cpp  GmshUtils.cpp  Timer.cpp  Utilities.cpp
src/Utilities/GmshUtilities/: CMakeLists.txt  GmshMesher.cpp  GmshUtils.cpp
tests/: CMakeLists.txt  CellSelectorTests.cpp  ConfigParserTests.cpp  RayTriangleIntersectionTests.cpp  TetrahedronMeshManagerTests.cpp  VolumetricMeshDataTests.cpp  main.cpp
tests/DataHandling/: HDF5HandlerTests.cpp  TetrahedronMeshManagerTests.cpp  TriangleMeshHdf5ManagerTests.cpp
tests/FiniteElementMethod/: FEMCheckersTests.cpp
tests/FiniteElementMethod/BoundaryConditions/: MatrixBoundaryConditionsTests.cpp  VectorBoundaryConditionsTests.cpp
tests/FiniteElementMethod/Cell/: CellSelectorTests.cpp
tests/FiniteElementMethod/Cubature/: BasisSelectorTests.cpp  CubatureManagerTests.cpp
tests/FiniteElementMethod/LinearAlgebraManagers/: MatrixManagerTests.cpp  VectorManagerTests.cpp
tests/Generators/: ParticleGeneratorTests.cpp  RealNumberGeneratorTests.cpp  VolumeCreatorTests.cpp
tests/Geometry/: GeometryVectorTests.cpp  MathVectorTests.cpp  MeshTests.cpp  RayTriangleIntersectionTests.cpp  SegmentTriangleIntersectionTests.cpp
tests/Particle/: ParticleTests.cpp
tests/Utilities/: ConfigParserTests.cpp
(+269 files in other folders)
