# src/CMakeLists.txt

add_subdirectory(DataHandling)
add_subdirectory(FiniteElementMethod)
add_subdirectory(Generators)
add_subdirectory(Geometry)
add_subdirectory(Particle)
add_subdirectory(ParticleInCellEngine)
add_subdirectory(SessionManagement)
add_subdirectory(SputteringModel)
add_subdirectory(Utilities)
